--- a/app.wxss
+++ b/app.wxss
@@ -1,7 +1,6 @@
 /**app.wxss**/
 /**引入weui**/
 @import 'weui.wxss';
-
 .container {
   height: 100%;
   width: 100%;
@@ -12,5 +11,5 @@
   padding: 0;
   box-sizing: border-box;
   background-color: #EEEEEE;
-  overflow-x: hidden;
+  overflow: hidden;
 } 
