--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,13 +1,15 @@
 /**index.wxss**/
 /* 登录账号/手机号 登录密码*/
 .loginView{
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
-  padding: 200rpx 0;
+  padding: 200rpx 0; 
+  width: 100%;
   box-sizing: border-box;
+  position: fixed;
+  top: 0;
 }
 .username{
   background-color: #E3EDF4;
