--- a/pages/realtimedata/chart/chart.wxml
+++ b/pages/realtimedata/chart/chart.wxml
@@ -1,4 +1,4 @@
 <!--pages/chart/chart.wxml-->
 <view class="container chart">
-  <canvas canvas-id="lineCanvas"></canvas>
+  <canvas canvas-id="lineCanvas"  disable-scroll='true' bindtouchstart='touchHandler' bindtouchmove='moveHandler' bindtouchend='touchEndHandler'></canvas>
 </view>
