--- a/pages/realtimedata/trans/trans.wxml
+++ b/pages/realtimedata/trans/trans.wxml
@@ -26,7 +26,7 @@
   <!-- 今日成功交易流水趋势图 -->
   <view class="transchart">
      <text class="title-text">今日成功交易流水趋势图</text>
-     <canvas canvas-id="lineCanvas"></canvas> 
+     <canvas canvas-id="lineCanvas" disable-scroll='true' bindtouchstart='touchHandler' bindtouchmove='moveHandler' bindtouchend='touchEndHandler'></canvas> 
   </view>
   
   <!-- 今日新老商户 -->
