添加后端请求

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,10 @@
 <!--index.wxml-->
 <view class="loginView">
   <view class="username">
-    <image src="../../images/icon_mobile.png"></image>
-     <input placeholder="请输入手机号" placeholder-style="color:#6AA1C8"bindinput="getUsername" /> 
+     <input placeholder="请输入手机号" bindinput="getUsername" type='number'/> 
   </view>
   <view class="username">
-    <image src="../../images/icon_lock.png"></image>
-     <input placeholder="请输入密码" placeholder-style="color:#6AA1C8" bindinput="getPassword" /> 
+     <input placeholder="请输入密码" bindinput="getPassword" password='true'/> 
   </view>
   <button class="login" bindtap="bindInLogin">登录</button>
 </view>
