--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -7,28 +7,22 @@
   justify-content: space-between;
   padding: 200rpx 0; 
   width: 100%;
-  box-sizing: border-box;
-  position: fixed;
-  top: 0;
+  /* box-sizing: border-box;
+  position: fixed; */
+  /* top: 0; */
 }
 .username{
-  background-color: #E3EDF4;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 75%;
-  padding: 20rpx;
+  background-color: #E3EDF4; 
+  width: 80%;
+  height: 100rpx;
   margin-top: 40rpx;
   border-radius: 10rpx;
 }
-.username image{
-  width: 40rpx;
-  height: 40rpx;
-}
 .username input{
-  height: 60rpx;
-  font-size: 30rpx;
-  margin-left: 20rpx;
+  height: 100%;
+  width: 100%;
+  font-size: 36rpx;
+  text-align: center;
 }
 /* 登录 */
 .login{
